# ai-harness

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  adopting.md
docs/docs-format/: README.md  adr.md  agent-def.md  agents.md  features.md  handoff.md  history.md  pr-comment.md  rules.md
docs/history/: B-autogen-marker-substring-match-hides-violations.md  README.md
hooks/: pre-commit
scripts/: check_doc_form.py  check_gate_drift.py  check_pr_body.py  gate_config.py  gen_readmes.py  install_hooks.py
src/: README.md
src/ai_harness/: README.md  __init__.py  check_doc_form.py  check_pr_body.py  cli.py  config.py  gate_config.py  gen_readmes.py  install_agents.py  install_hooks.py
src/ai_harness/agents/: README.md  reviewer-altitude.md  reviewer-code.md  reviewer-direction.md
src/ai_harness/docs_format/: README.md  adr.md  agent-def.md  agents.md  features.md  handoff.md  history.md  pr-comment.md  rules.md
src/ai_harness/hooks/: README.md  pre-commit
tests/: README.md  test_check_doc_form.py  test_check_gate_drift.py  test_check_pr_body.py  test_config.py  test_gate_config.py  test_gen_readmes_guard.py  test_install_agents.py  test_install_hooks.py
