[project]
name = "ai-harness"
version = "0.1.0"
description = "레포 공용 pre-commit·PR 문서 게이트 (stdlib only)"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ai-harness = "ai_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_harness"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
